@@ -8,8 +8,9 @@ Horizon Forbidden West in an attempt to come up with something that could be use
 
 ### Building
 
-Prerequisites:
-- Make sure you have **JDK 24** installed. We recommend using [Adoptium](https://adoptium.net/temurin/releases/?arch=x64&version=17&package=jdk)
+#### Prerequisites
+
+- Make sure you have **JDK 25** installed; [Adoptium](https://adoptium.net/temurin/releases/?arch=x64&version=17&package=jdk) is recommended for use
 - Make sure you have **Git** installed
 
 Open the terminal and execute the following commands:
@@ -19,8 +20,18 @@ Open the terminal and execute the following commands:
 
 Ready-to-use distributions can be found under the `odradek-app/target/dist` directory.
 
-#### Development note
+#### Troubleshooting
 
+<details>
+<summary>Preview features are not enabled</summary>
+You will need to supply a compiler flag  in IntelliJ IDEA's settings to make this error go away.
+
+Go to _File | Settings | Build, Execution, Deployment | Compiler_
+and set **___Shared VM options___** to `--enable-preview`.
+</details>
+
+<details>
+<summary>Cannot resolve symbol 'HorizonForbiddenWest'</summary>
 IntelliJ IDEA refuses to provide code analysis for generated RTTI classes due to the enormous size of the generated
 code, and all references will be highlighted in _red_. The project will still compile and launch just fine.
 
@@ -32,6 +43,7 @@ idea.max.intellisense.filesize=10000
 ```
 
 Then restart the IDE.
+</details>
 
 ## License
 This project is licensed under the GPL-3.0 license.
